updated and consolidated docs

--- a/src/I18N.md
+++ b/src/I18N.md
@@ -1,3 +1,5 @@
+# Toucan - Localization
+
 Below are some details relating to localization support
 
 The EF model builders for both Mssql and Postgres generate tables with
@@ -18,4 +20,3 @@ Each of the above customizations to the pipeline uses an injected instance of IH
 The ILocalizationService can be used to get a full list of all supported cultures, timezones, and create a dictionary of culture-specific resource strings.
 
 The default implementation of the localization service is thread-safe.
-
